--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
 
   --color-primary: #007bff;
   --color-success: #28a745;
+  --color-danger: orangered;
 }
 
 * {
@@ -35,7 +36,7 @@ body {
 
 section {
   width: 100%;
-  padding: 8rem 0;
+  padding: 4rem 0;
 }
 
 .container {
@@ -76,8 +77,17 @@ section {
   display: flex;
 }
 
+.--align-center {
+  display: flex;
+  align-items: center;
+}
+
 .--100vh {
   height: 100vh;
+}
+
+.--mh-100vh {
+  min-height: 100vh;
 }
 
 /* Grid */
@@ -374,6 +384,10 @@ p {
   width: 100%;
 }
 
+.--width-500px {
+  width: 500px;
+}
+
 .--line {
   position: relative;
 }
@@ -393,4 +407,27 @@ p {
     rgba(163, 1, 191, 1) 44%,
     rgba(217, 8, 170, 1) 57%
   );
+}
+
+.--list-style-none {
+  list-style: none;
+}
+
+.--profile-img {
+  width: 6rem;
+  height: 6rem;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+}
+
+a {
+  font-size: 1.4rem;
+  color: var(--dark-blue);
+  text-decoration: none;
+  transition: all 0.2s;
+}
+
+a:hover {
+  color: var(--color-dark);
+  font-size: 1.5rem;
 }
